Migrates to Quarkus framework (#6)
Refactors the project to use the Quarkus framework:
- Replaces Spring Boot with Quarkus for improved performance and reduced
footprint
- Adapts the codebase to Quarkus' dependency injection and configuration
patterns
- Configures native image building for faster startup times